syntax = "proto2";

enum MessageStatus
{
    StatusOk = 0;
}

